--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,10 +3,10 @@
     <div class ="col-12 col-md-6 offset-lg-2">
       <div class = "bg-white rounded p-3 shadow">
         Create list
-        <%= simple_form_for @list do |t|%>
-          <%= t.input :name, placeholder: "Action"%>
-          <%= t.submit class: "btn btn-flat"%>
-        <%end%>
+        <%= simple_form_for @list do |f|%>
+          <%= f.input :name, placeholder: "Action"%>
+          <%= f.submit class: "btn btn-flat"%>
+        <% end %>
         </div>
       </div>
     </div>
