--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,19 +3,23 @@
 <br>
 <%= "You haven't added anything" if @list.movies.empty? %>
 <br>
+
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill if @list.photo.attached?%>
+
+
 <%= link_to 'Delete list', list_path(@list), method: :delete, class: 'btn btn-danger', data: { confirm: 'You sure you want to delete?' } %>
 <div>
-<%@list.movies.each do |movie|%>
-  <%bookmark = Bookmark.find_by(list: @list, movie: movie)%>
-  <%= image_tag movie.poster_url, alt: movie.title, class: 'movie' %>
-  <%= movie.title%> - Rating: <%=movie.rating%>
+<%@list.bookmarks.each do |bookmark|%>
+  <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title, class: 'movie' %>
+
+  <%=bookmark.movie.title%> - Rating: <%=bookmark.movie.rating%>
   <br>
   Overview:
   <br>
-  <%=movie.overview%>
+  <%=bookmark.movie.overview%>
   <br>
   <%= bookmark.comment%>
-  <%= link_to 'delete', bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to delete #{movie.title} from #{@list.name}"}, class: 'text-danger' %></small>
+  <%= link_to 'delete', bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to delete #{bookmark.movie.title} from #{@list.name}"}, class: 'text-danger' %></small>
   <br>
 <% end %>
 <%= link_to "Add movie", new_list_bookmark_path(@list)%>
